freezerhd: Update wifi config location /data/vendor/wifi
update wpa_supplicant / hostapd config to /data/vendor/wifi

Change-Id: I900e1f7640ce3cb32ce8a7621b63b9e69892c8a2
CRs-Fixed: 2069282
Signed-off-by: jmpfbmx <jmpf.bmx@gmail.com>

--- a/rootdir/etc/init.connectivity.rc
+++ b/rootdir/etc/init.connectivity.rc
@@ -36,6 +36,12 @@ on post-fs-data
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/wpa_supplicant 0770 wifi wifi
+    mkdir /data/vendor/wifi 0770 wifi wifi
+    mkdir /data/vendor/wifi/sockets 0770 wifi wifi
+    mkdir /data/vendor/wifi/hostapd 0770 wifi wifi
+    mkdir /data/vendor/wifi/hostapd/ctrl 0770 wifi wifi
+    mkdir /data/vendor/wifi/wpa_supplicant 0770 wifi wifi
+    mkdir /data/vendor/wifi/wigig_hostapd 0770 wifi wifi
 
 # BT relayer mode used VCOM
     chown bluetooth bluetooth /dev/ttyGS2
