--- a/rootdir/etc/init.connectivity.rc
+++ b/rootdir/etc/init.connectivity.rc
@@ -74,7 +74,7 @@ service mnld /vendor/bin/mnld
 
 # Wlan
 service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
-    -O/data/vendor/wifi/wpa/sockets -g@android:wpa_wlan0
+    -O/data/vendor/wifi/wpa/sockets -g@android:wpa_wlan0 -puse_p2p_group_interface=1
     interface android.hardware.wifi.supplicant@1.0::ISupplicant default
     interface android.hardware.wifi.supplicant@1.1::ISupplicant default
     #   we will start as root and wpa_supplicant will switch to user wifi
