--- a/rootdir/etc/meta_init.rc
+++ b/rootdir/etc/meta_init.rc
@@ -5,10 +5,10 @@
 #
 import /init.environ.rc
 import /vendor/etc/init/hw/init.aee.rc
-import ${ro.mtkrc.path}meta_init.connectivity.rc
+import /vendor/etc/init/hw/meta_init.connectivity.rc
 import /vendor/etc/init/hw/meta_init.project.rc
 #Make sure meta_init.modem.rc is the last rc file.
-import ${ro.mtkrc.path}meta_init.modem.rc
+import /vendor/etc/init/hw/meta_init.modem.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
@@ -204,7 +204,7 @@ on fs
     write /proc/bootprof "INIT:Mount_START"
     mkdir /dev/block/platform/mtk-msdc.0
     symlink ../soc/11230000.mmc /dev/block/platform/mtk-msdc.0/11230000.MSDC0
-    mount_all /vendor/etc/fstab.mt8163 ${ro.mtkrc.path}multi_init.rc
+    mount_all /vendor/etc/fstab.mt8163 /vendor/etc/init/hw/multi_init.rc
     write /proc/bootprof "INIT:Mount_END"
 #INTERNAL_END
 
